# Syntaxis-AI

./: README.md  pyproject.toml  verify.py
optimizer/: __init__.py  __main__.py  _version.py  compress.py  offline.py  profiles.py  tokenizer.py
optimizer/cache/: __init__.py  providers.py
optimizer/dashboard/: __init__.py  server.py  state.py
optimizer/dashboard/templates/: dashboard.html
optimizer/observability/: __init__.py  metrics.py
optimizer/providers/: __init__.py  anthropic.py  base.py  bedrock.py  openai.py
optimizer/relevance/: __init__.py  bm25.py  hybrid.py
optimizer/transforms/: __init__.py  base.py  cache_aligner.py  crusher.py  deduper.py  kompressor.py  pipeline.py
tests/: test_optimization.py
